[gd_scene load_steps=10 format=2]

[ext_resource path="res://Guns/DroppedGun.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Misc/GunTooltipBgr.png" type="Texture" id=3]
[ext_resource path="res://Guns/GunHBox.gd" type="Script" id=4]
[ext_resource path="res://UI/Gun1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Misc/Interact.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 50 )

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.9, 1.8 ),
"transitions": PoolRealArray( 0.366021, 0.366022 ),
"update": 0,
"values": [ Vector2( -20, 10 ), Vector2( -20, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 150.0

[node name="DroppedGun" type="KinematicBody2D"]
z_index = 2
collision_layer = 32
collision_mask = 64
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -20, -10 )
rotation = -0.0969627
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 2 )

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 3 )

[node name="PopUp" type="Node2D" parent="."]
position = Vector2( 0, -180 )
z_index = 15
z_as_relative = false

[node name="Sprite" type="Sprite" parent="PopUp"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="PopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -132.5
margin_right = 200.0
margin_bottom = 132.5
rect_min_size = Vector2( 400, 265 )
custom_constants/separation = 50
script = ExtResource( 4 )

[node name="Gun1" parent="PopUp/HBoxContainer" instance=ExtResource( 5 )]
editor/display_folded = true

[node name="Gun2" parent="PopUp/HBoxContainer" instance=ExtResource( 5 )]
editor/display_folded = true
margin_left = 225.0
margin_right = 400.0

[node name="Interact" parent="PopUp" instance=ExtResource( 6 )]
position = Vector2( 0, -150 )
interaction = "Swap"
active = true

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_PlayerDetect_body_exited"]
